--- a/app/src/main/res/layout/fragment_lister_recycler.xml
+++ b/app/src/main/res/layout/fragment_lister_recycler.xml
@@ -8,15 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_path"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="path"
-            android:textColor="@color/white" />
+        android:orientation="vertical"
+        android:paddingTop="10dp">
 
         <LinearLayout
             android:id="@+id/ll_header"
@@ -24,15 +17,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp">
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButtonBack"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:background="#00000000"
+                android:onClick="backClick"
+                android:paddingLeft="20dp"
+                android:src="@drawable/ic_back" />
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_list"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="5dp"
