--- a/app/src/main/res/layout/activity_music_controller.xml
+++ b/app/src/main/res/layout/activity_music_controller.xml
@@ -136,6 +136,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
+            android:progress="25"
             app:layout_constraintBottom_toTopOf="@+id/playBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -144,18 +145,20 @@
             android:id="@+id/elapsedTimeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
             android:text="0:0"
             android:textColor="#FFFFFF"
-            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
+            app:layout_constraintStart_toStartOf="@+id/positionBar"
             app:layout_constraintTop_toBottomOf="@+id/positionBar" />
 
         <TextView
             android:id="@+id/remainingTimeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
             android:text="3:14"
             android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
+            app:layout_constraintEnd_toEndOf="@+id/positionBar"
             app:layout_constraintTop_toBottomOf="@+id/positionBar" />
 
         <Button
