--- a/app/src/main/res/layout/activity_queue.xml
+++ b/app/src/main/res/layout/activity_queue.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,15 +9,69 @@
     tools:context=".activities.QueueActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/listerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:background="#222222"
+        android:foregroundGravity="center"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/prevBtn2"
+            style="@style/Widget.AppCompat.ActionButton"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginEnd="5dp"
+            android:adjustViewBounds="true"
+            android:onClick="prevBtnClick"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_prev" />
+
+        <Button
+            android:id="@+id/playBtn3"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+
+            android:background="@drawable/ic_play"
+            android:onClick="playBtnClick" />
+
+        <ImageButton
+            android:id="@+id/nextBtn2"
+            style="@style/Widget.AppCompat.ActionButton"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="5dp"
+            android:adjustViewBounds="true"
+            android:onClick="nextBtnClick"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_next" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
