--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:scrollbars="none">
 
             <LinearLayout
@@ -115,17 +115,11 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
-                <ScrollView
+                <LinearLayout
+                    android:id="@+id/layout_recent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="none">
-
-                    <LinearLayout
-                        android:id="@+id/layout_recent"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical" />
-                </ScrollView>
+                    android:layout_height="280dp"
+                    android:orientation="vertical" />
 
             </LinearLayout>
         </ScrollView>
