--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -39,6 +39,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:background="#00000000"
+                android:clickable="false"
                 android:src="@drawable/ic_filter" />
 
         </LinearLayout>
